--- a/packages/react-bau/package.json
+++ b/packages/react-bau/package.json
@@ -1,14 +1,9 @@
 {
-  "name": "react-alpine-monorepo",
-  "private": true,
-  "description": "Idea for a very lightweight JS-in-JS implementation.",
-  "scripts": {
-    "tier-1": "yarn workspace react-alpine-example-tier-1 run start"
-  },
-  "workspaces": [
-    "examples/*",
-    "packages/*"
-  ],
+  "name": "react-bau",
+  "version": "0.0.1",
+  "description": "Tooling for SSG.",
+  "scripts": {},
+  "bin": "src/cli.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/FlorianRappl/react-alpine.git"
@@ -26,7 +21,18 @@
   "homepage": "https://react-alpine.js.org",
   "devDependencies": {
     "@types/node": "^18.0.0",
-    "gh-pages": "^4.0.0",
+    "@types/react": "^18.0.14",
+    "@types/react-dom": "^18.0.5",
+    "@types/styled-components": "^5.1.25"
+  },
+  "dependencies": {
+    "http-server": "^14.1.1",
+    "livereload": "^0.9.3",
+    "nodemon": "^2.0.16",
+    "react": "^18.2.0",
+    "react-alpine": "0.0.1",
+    "react-dom": "^18.2.0",
+    "styled-components": "^5.3.5",
     "ts-node": "^10.8.1",
     "typescript": "^4.7.4"
   }
